Updated DB Info for Render.com

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 SV_PORT=10000
-DB_PORT=10000
-DB_HOST=http://localhost:10000
-DB_NAME=ecommerce_db
-DB_PASSWORD=TEST1234
-DB_USERNAME=TEST01
+DB_PORT=5432
+DB_HOST=postgresql://cyrus:IExiEkUQQhV1H4lCgCZF0Y7c6ZeN8ovg@dpg-cqr06f5svqrc73fob4b0-a/techblog_51t7
+DB_USERNAME=cyrus
+DB_PASSWORD=IExiEkUQQhV1H4lCgCZF0Y7c6ZeN8ovg
