Updated DB Info for Render.com 05

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PORT=5432
 DB_HOST=dpg-cqr06f5svqrc73fob4b0-a.oregon-postgres.render.com
 DB_USERNAME=cyrus
 DB_PASSWORD=IExiEkUQQhV1H4lCgCZF0Y7c6ZeN8ovg
+DB_NAME=techblog_51t7
