Updated DB Info for Render.com 11

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SV_PORT=10000
 DB_PORT=5432
-DB_HOST=dpg-cqr06f5svqrc73fob4b0-a.oregon-postgres.render.com
+DB_HOST=dpg-cqr06f5svqrc73fob4b0-a.oregon-postgres
 DB_USERNAME=cyrus
 DB_PASSWORD=IExiEkUQQhV1H4lCgCZF0Y7c6ZeN8ovg
 DB_NAME=techblog_51t7
